# django_todo

./: Makefile  README.md  gunicorn_config.py  pyproject.toml
config/: settings.py
